[package]
name = "podcoast"
version = "0.1.0"
authors = ["Thatcher <tchamberlin@lynk.world>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
serde = "1.0"
serde_yaml = "0.8"
clap = "2.33.3"
url = "2.2.2"
